--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "js-tdd-course",
+  "name": "btc-converter",
   "version": "1.0.0",
-  "description": "Nossa biblioteca do curso de JS com TDD na prática.",
+  "description": "A CLI to convert Bitcoin to any currency provided.",
   "main": "index.js",
   "scripts": {
-    "clear": "rimraf lib",
-    "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
+    "clear": "rimraf bin",
+    "build": "npm run clear && ./node_modules/.bin/babel --out-dir bin src",
     "build:watch": "npm run build -- --watch",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
-    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
-    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --reporter nyan",
+    "test:tdd": "npm run test -- --watch",
     "test:coverage": "nyc npm test"
+  },
+  "preferGlobal": true,
+  "bin": {
+    "btc-converter": "bin/main.js"
   },
   "nyc": {
     "reporter": [
@@ -24,30 +28,39 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/willianjusten/js-tdd-course.git"
+    "url": "git+https://github.com/pponto/btc-converter.git"
   },
   "keywords": [
     "js",
     "tdd",
     "library"
   ],
-  "author": "Willian Justen <willianjustenqui@gmail.com> (https://willianjusten.com.br/)",
+  "author": "pponto (https://twitter.com/pponto)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/willianjusten/js-tdd-course/issues"
+    "url": "https://github.com/pponto/btc-converter/issues"
   },
-  "homepage": "https://github.com/willianjusten/js-tdd-course#readme",
+  "homepage": "https://github.com/pponto/btc-converter#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.3.2",
-    "babel-register": "^6.24.0",
+    "babel-preset-env": "^1.3.3",
+    "babel-register": "^6.24.1",
     "chai": "^3.5.0",
+    "chalk": "^2.3.2",
     "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.6.1",
     "husky": "^0.11.9",
     "mocha": "^3.2.0",
-    "nyc": "^10.2.0",
-    "rimraf": "^2.6.1"
+    "nock": "^9.2.3",
+    "nyc": "^10.2.2",
+    "rimraf": "^2.6.2",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0"
+  },
+  "dependencies": {
+    "commander": "^2.15.1",
+    "ora": "^2.0.0",
+    "request": "^2.85.0"
   }
 }
