--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "btc-converter",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A CLI to convert Bitcoin to any currency provided.",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "build:watch": "npm run build -- --watch",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
-    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --reporter nyan",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --require babel-polyfill",
     "test:tdd": "npm run test -- --watch",
     "test:coverage": "nyc npm test"
   },
@@ -43,6 +43,7 @@
   "homepage": "https://github.com/pponto/btc-converter#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.3",
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
@@ -55,12 +56,13 @@
     "nock": "^9.2.3",
     "nyc": "^10.2.2",
     "rimraf": "^2.6.2",
-    "sinon": "^4.5.0",
-    "sinon-chai": "^3.0.0"
+    "sinon": "^2.3.8",
+    "sinon-chai": "^2.11.0"
   },
   "dependencies": {
     "commander": "^2.15.1",
     "ora": "^2.0.0",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "request-promise-native": "^1.0.5"
   }
 }
